src/objects/aci_Inspect_Result__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analysis Execution</label>
        <referenceTo>aci_Analysis_Execution__c</referenceTo>
        <relationshipLabel>Inspect Results</relationshipLabel>
        <relationshipName>Inspect_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspector_Name__c</fullName>
        <label>Inspector Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ok</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspect Result</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspect Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>